task_6/dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

# Alternatively, you can create namespace using below command:
# kubectl create namespace <insert-namespace-name-here>
