task_6/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: dev
  labels: 
    app: dev
  name: backend-pod
spec:
  nodeSelector:
    ssd: "true"
  containers:
  - image: centos
    name: centos
    stdin: true
    tty: true
