task_6/java-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: dev
  labels:
    run: dev
  name: java-pod
spec:
  nodeSelector:
    ssd: "true"
  containers:
  - image: centos
    name: centos
    stdin: true
    tty: true
