task_6/allow-traffic-from-a-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-dev
spec:
  podSelector:
    matchLabels:
      app: dev
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: dev
