task_6/default-deny-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: dev
  name: default-deny-netpol
spec:
  podSelector:
  - Ingress
